--- a/accommodations/templates/accommodations/accommodation_detail.html
+++ b/accommodations/templates/accommodations/accommodation_detail.html
@@ -107,6 +107,8 @@
               </div>
             </a>
           </div>
+        {% empty %}
+          <p>No rooms found.</p>
         {% endfor %}
       {% endif %}
     </div>
