--- a/accommodations/templates/accommodations/accommodation_list.html
+++ b/accommodations/templates/accommodations/accommodation_list.html
@@ -80,6 +80,8 @@
             </div>
           </a>
         </div>
+      {% empty %}
+        <p>No items found.</p>
       {% endfor %}
 
       
