--- a/activities/templates/activities/activities_list.html
+++ b/activities/templates/activities/activities_list.html
@@ -79,6 +79,8 @@
             </div>
           </a>
         </div>
+      {% empty %}
+        <p>No activities found.</p>
       {% endfor %}
 
       
