--- a/flights/templates/flights/flights_search.html
+++ b/flights/templates/flights/flights_search.html
@@ -93,20 +93,14 @@
       {% if generated_route %}
         <div class="col-md-6 col-lg-4 mb-5" data-aos="fade-up">
           <a href="{% url 'flights:generated_route' generated_route.pk %}" class="room">
-            
             <div class="p-3 text-center room-info">
-              <h2>{{ generated_route.get_name }}</h2>
-              <span class="text-uppercase letter-spacing-1">origin -> destination</span>
+              <h2>Flight - {{ generated_route.id }}</h2>
+              <span class="text-uppercase letter-spacing-1">{{generated_route.get_first_flight_origin}} -> {{generated_route.get_last_flight_destination}}</span>
             </div>
           </a>
         </div>
       {% else %}
-
-        <h1>{% trans "Flights" %}</h1>
-        <br>
-        {% for flight in flights %}
-          <p>{{flight.name}}</p>
-        {% endfor %}
+        <p>No results</p>
       {% endif %}
 
 
