--- a/flights/templates/flights/generated_route.html
+++ b/flights/templates/flights/generated_route.html
@@ -33,7 +33,6 @@
   <div class="container">
     
     <div class="row">
-
       <!-- {% for flight in object_list %}
         <div class="col-md-6 col-lg-4 mb-5" data-aos="fade-up">
           <a href="{% url 'flights:flight_detail' flight.pk %}" class="room">
@@ -49,21 +48,22 @@
       {% endfor %} -->
 
         <div class="col-md-6 col-lg-4 mb-5" data-aos="fade-up">
-            
-            <div class="p-3 text-center room-info">
-              <h2>{{ generated_route.get_name }}</h2>
-              <span class="text-uppercase letter-spacing-1">{{generated_route.get_first_flight_origin}} -> {{generated_route.get_last_flight_destination}}</span>
+          <div class="p-3 text-center room-info">
+            <h2>Flight - {{ generated_route.pk }}</h2>
+            <span class="text-uppercase letter-spacing-1">{{generated_route.get_first_flight_origin}} -> {{generated_route.get_last_flight_destination}}</span>
 
-              <ul>
-                {% for flight_route in generated_route.flight_routes.all %}
-                  <li>
-                    {{ flight_route.origin.name }} -> {{ flight_route.destination.name }}
-                  </li>
-                {% endfor %}
-              </ul>
+            <ul>
+              {% for flight_route in generated_route.flight_routes.all %}
+                <li>
+                  {{ flight_route.origin.name }} -> {{ flight_route.destination.name }}
+                </li>
+              {% empty %}
+                <p>No flights found.</p>
+              {% endfor %}
+            </ul>
 
-              <a href="{% url 'flights:flight_booking' generated_route.pk %}">{% trans "Book" %}</a>
-            </div>
+            <a href="{% url 'flights:flight_booking' generated_route.pk %}">{% trans "Book" %}</a>
+          </div>
         </div>
 
     </div>
