--- a/recommendations/templates/recommendations/home.html
+++ b/recommendations/templates/recommendations/home.html
@@ -88,6 +88,8 @@
                         </div>
                     </a>
                 </div>
+            {% empty %}
+                <p>No items found.</p>
             {% endfor %}
 
         </div>
@@ -118,6 +120,8 @@
                         </div>
                     </a>
                 </div>
+            {% empty %}
+                <p>No items found.</p>
             {% endfor %}
 
 
